Fix font size errors on mobile display

--- a/src/components/Payment/0px-599px.scss
+++ b/src/components/Payment/0px-599px.scss
@@ -165,7 +165,7 @@
       padding: 0;
       font-family: $secundary-font;
       font-weight: 400;
-      font-size: clamp(11px, calc(0.1em + 2.397vw), 30);
+      font-size: clamp(9.399px, calc(0.1em + 3.3vw), 30px);
       color: $c1-C;
       position: absolute;
       top: 45.031%;
@@ -278,7 +278,7 @@
       padding: 0;
       font-family: $secundary-font;
       font-weight: 400;
-      font-size: clamp(11px, calc(0.1em + 2.397vw), 30);
+      font-size: clamp(9.399px, calc(0.1em + 3.3vw), 30px);
       color: $c1-C;
       position: absolute;
       top: 80.425%;
